End of 'Complete Front-End Project: Build a Game' on Frontend Masters by Brian Holt. https://btholt.github.io/project-fox-game-site/

--- a/start-here/src/index.html
+++ b/start-here/src/index.html
@@ -18,7 +18,7 @@
         <div class="foreground-rain"></div>
         <div class="frame"></div>
         <div class="modal">
-          <div class="model-inner">Press the middle button to start</div>
+          <div class="modal-inner">Press the middle button to start</div>
         </div>
         <div class="buttons">
           <div class="btn left-btn"></div>
