First step in converting project to typescript: infra setup.

--- a/start-here/src/index.html
+++ b/start-here/src/index.html
@@ -32,6 +32,6 @@
         </div>
       </div>
     </div>
-    <script src="./init.js"></script>
+    <script src="./init.ts"></script>
   </body>
 </html>
